--- a/src/Search.css
+++ b/src/Search.css
@@ -1,5 +1,34 @@
-.input{
-    margin-top: 20px;
-    width: 400px;
+.lists-items{
+    list-style: none;
+    background-color: gray;
+    border-bottom: 10px;
     padding: 10px;
+    align-items: center;
+}
+
+.lists-items li{
+    display: inline-block;
+    padding-right: 30px;
+    padding-top: 10px;
+    color: red;
+    text-decoration: underline;
+    font-size: large;
+    font-weight: 500;
+}
+
+.lists-items .nav{
+    float: right;
+    font-size: larger;
+    font-weight: 500;
+    background-color: blue;
+    padding: 8px;
+    margin: 2px solid red;
+}
+
+input[type="text"]{
+    width: 20rem;
+}
+
+.lists-items li a:hover{
+    color: white;
 }
